--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic-settings>=2.8.1",
     "pymysql>=1.1.1",
     "python-dotenv>=1.1.0",
+    "pytz>=2025.2",
     "redis>=5.2.1",
     "sqlalchemy>=2.0.40",
     "uvicorn[standard]>=0.34.0",
