--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=root
-MYSQL_DATABASE=device_manager
+MYSQL_DATABASE=device_1
 
 # Redis配置
 REDIS_HOST=127.0.0.1
@@ -12,4 +12,14 @@ REDIS_PASSWORD=
 REDIS_DB=0 
 
 # 时区设置
-TIMEZONE=UTC
+TIMEZONE=Asia/Shanghai
+
+# ADB配置
+ADB_PATH=adb  # adb可执行文件的路径
+ADB_SERVER_HOST=127.0.0.1  # ADB服务器主机
+ADB_SERVER_PORT=5037  # ADB服务器端口
+
+# # 垃圾清理配置
+# GARBAGE_CLEANUP_INTERVAL=3600  # 清理检查间隔（秒）
+# GARBAGE_EXPIRATION_HOURS=24    # 过期时间（小时）
+# GARBAGE_RETRY_DELAY=300        # 重试延迟（秒）
