--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "fastapi>=0.115.12",
     "httpx>=0.28.1",
     "mysql-connector-python>=9.2.0",
+    "pip>=25.0.1",
+    "psutil>=7.0.0",
     "pydantic>=2.11.1",
     "pydantic-settings>=2.8.1",
     "pymysql>=1.1.1",
