--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,58 @@
-# Python-generated files
+# Python相关文件
 __pycache__/
-*.py[oc]
+*.py[cod]
 build/
 dist/
 wheels/
 *.egg-info
+*.pyc
+.pytest_cache/
 
-# Virtual environments
+# 虚拟环境
 .venv
+venv/
+env/
 
-# 环境变量
+# 环境变量文件
 .env
+.env.*
 
-# 测试文件
-tests/
-pytest.ini
-test.db
+# 测试相关
+# tests/
+# pytest.ini
+# test.db
+# .coverage
+# htmlcov/
 
-# 上传文件
+# 上传文件目录
 uploads/
+uploads/temp/
 
-# 日志文件
+# 日志文件和报告
 logs/
+logs/runtime_reports/
+logs/reports/
+logs/archive/
 *.log
 
 # 临时文件
 tmp/
+temp/
+.tmp/
+.temp/
 
-# 测试文件
+# IDE和编辑器相关
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# 操作系统相关文件
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# 本地配置文件
+config_local.py
+local_settings.py
